--- a/generators/app/templates/app/shared/components/rounded-button/rounded-button.styles.js.ejs
+++ b/generators/app/templates/app/shared/components/rounded-button/rounded-button.styles.js.ejs
@@ -8,7 +8,7 @@ export default StyleSheet.create({
     borderRadius: 5,
     marginHorizontal: Metrics.section,
     marginVertical: Metrics.baseMargin,
-    backgroundColor: Colors.fire,
+    backgroundColor: Colors.jhipsterBlue,
     justifyContent: 'center'
   },
   buttonText: {
