--- a/generators/entity/templates/entity-delete-modal.js.ejs
+++ b/generators/entity/templates/entity-delete-modal.js.ejs
@@ -1,56 +1,10 @@
 import React from 'react';
-import { TouchableHighlight, StyleSheet, Modal, Text, View } from 'react-native';
+import { TouchableHighlight, Modal, Text, View } from 'react-native';
 import { connect } from 'react-redux';
 
 import <%= context.entityNameCapitalized %>Actions from './<%= context.entityFileName %>.reducer';
 
-const styles = StyleSheet.create({
-    centeredView: {
-        flex: 1,
-        justifyContent: 'center',
-        alignItems: 'center',
-        marginTop: 22,
-    },
-    modalView: {
-        margin: 20,
-        backgroundColor: 'white',
-        borderRadius: 20,
-        padding: 35,
-        alignItems: 'center',
-        shadowColor: '#000',
-        shadowOffset: {
-            width: 0,
-            height: 2,
-        },
-        shadowOpacity: 0.25,
-        shadowRadius: 3.84,
-        elevation: 5,
-    },
-    openButton: {
-        backgroundColor: 'grey',
-        borderRadius: 20,
-        padding: 10,
-        elevation: 2,
-    },
-    cancelButton: {
-        backgroundColor: 'grey',
-    },
-    submitButton: {
-        backgroundColor: 'red',
-    },
-    textStyle: {
-        color: 'white',
-        fontWeight: 'bold',
-        textAlign: 'center',
-    },
-    modalText: {
-        marginBottom: 15,
-        textAlign: 'center',
-    },
-    flex: {
-        flex: 1,
-    },
-});
+import styles from './<%= context.entityFileName %>-entity-styles'
 
 function <%= context.entityNameCapitalized %>EntityDeleteModal(props) {
     const { visible, setVisible, entity, navigation, testID } = props;
