--- a/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
@@ -17,7 +17,7 @@ export default React.forwardRef((props, ref) => {
       const itemLabel = listItem[listItemLabelField] || listItem.label || listItem.id || '';
       const value = listItem.value || listItem.id || '';
       const itemKey = listItem.itemKey || listItem.id || '';
-      return { label: itemLabel, value, itemKey };
+      return { label: `${itemLabel}`, value: value, itemKey: itemKey };
     });
   };
 
@@ -54,6 +54,7 @@ const pickerStyles = StyleSheet.create({
     backgroundColor: 'white',
     height: 40,
     fontFamily: Fonts.type.base,
+    borderColor: '#c0cbd3',
     color: 'black',
   },
   inputIOS: {
@@ -62,6 +63,7 @@ const pickerStyles = StyleSheet.create({
     paddingHorizontal: 10,
     borderWidth: 1,
     borderRadius: 4,
+    borderColor: '#c0cbd3',
     color: 'black',
   },
   inputAndroid: {
@@ -70,6 +72,7 @@ const pickerStyles = StyleSheet.create({
     paddingVertical: 8,
     borderWidth: 0.5,
     borderRadius: 8,
+    borderColor: '#c0cbd3',
     color: 'black',
   },
 });
