--- a/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
@@ -76,7 +76,7 @@ function DemoForm() {
           label="Boolean Field"
           placeholder="Enter boolean field"
         />
-        <FormField inputType="list" name="listField" ref={listFieldRef} label="List Field" listItems={sports} />
+        <FormField inputType="select-one" name="listField" ref={listFieldRef} label="List Field" listItems={sports} />
         <FormField inputType="date" name="dateField" ref={dateFieldRef} label="Date Field" />
         <FormField inputType="datetime" name="dateTimeField" ref={dateTimeFieldRef} label="Date Time Field" />
         <FormButton title={'Save'} />
