--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -47,6 +47,7 @@
     "react-native-reanimated": "REPLACE_WITH_VERSION",
     "react-native-safe-area-context": "REPLACE_WITH_VERSION",
     "react-native-screens": "REPLACE_WITH_VERSION",
+    "react-native-sectioned-multi-select": "REPLACE_WITH_VERSION",
     "react-native-web": "REPLACE_WITH_VERSION",
     "@expo/vector-icons": "REPLACE_WITH_VERSION",
     "expo-linking": "REPLACE_WITH_VERSION",
