--- a/generators/entity/templates/entity-e2e-test.js.ejs
+++ b/generators/entity/templates/entity-e2e-test.js.ejs
@@ -87,7 +87,7 @@ describe('<%= context.entityNameCapitalized %> Screen Tests', () => {
     await Utils.tapFirstElementByLabel('Confirm');
         <%_ } else if (formFieldType === 'boolean') { _%>
     await Utils.toggleSwitchToValue('<%= field.fieldName %>Input', <%= createFakeData[field.fieldName] %>);
-      <%_ } else if (formFieldType === 'list') { _%>
+      <%_ } else if (formFieldType === 'select-one') { _%>
     await element(by.id('<%= field.fieldName %>Input')).tap();
     await element(by.id('<%= field.fieldName %>InputPicker')).setColumnToValue(0, '<%= createFakeData[field.fieldName] %>');
     await element(by.id('<%= field.fieldName %>InputPickerDone')).tap();
@@ -123,7 +123,7 @@ describe('<%= context.entityNameCapitalized %> Screen Tests', () => {
     jestExpect(Date.parse(<%= field.fieldName %>CreateAttributes.label)).toEqual(Date.parse('<%= new Date(createFakeData[field.fieldName]).toFullISOString() %>'));
       <%_ } else if (formFieldType === 'boolean') { _%>
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= createFakeData[field.fieldName] %>')
-      <%_ } else if (formFieldType === 'list') { _%>
+      <%_ } else if (formFieldType === 'select-one') { _%>
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= createFakeData[field.fieldName] %>')
       <%_ } _%>
     <%_ }) _%>
@@ -161,7 +161,7 @@ describe('<%= context.entityNameCapitalized %> Screen Tests', () => {
     await Utils.tapFirstElementByLabel('Confirm');
         <%_ } else if (formFieldType === 'boolean') { _%>
     await Utils.toggleSwitchToValue('<%= field.fieldName %>Input', <%= updateFakeData[field.fieldName] %>);
-      <%_ } else if (formFieldType === 'list') { _%>
+      <%_ } else if (formFieldType === 'select-one') { _%>
     await element(by.id('<%= field.fieldName %>Input')).tap();
     await element(by.id('<%= field.fieldName %>InputPicker')).setColumnToValue(0, '<%= updateFakeData[field.fieldName] %>');
     await element(by.id('<%= field.fieldName %>InputPickerDone')).tap();
@@ -197,7 +197,7 @@ describe('<%= context.entityNameCapitalized %> Screen Tests', () => {
     jestExpect(Date.parse(<%= field.fieldName %>UpdateAttributes.label)).toEqual(Date.parse('<%= new Date(updateFakeData[field.fieldName]).toFullISOString() %>'));
       <%_ } else if (formFieldType === 'boolean') { _%>
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= updateFakeData[field.fieldName] %>')
-      <%_ } else if (formFieldType === 'list') { _%>
+      <%_ } else if (formFieldType === 'select-one') { _%>
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= updateFakeData[field.fieldName] %>')
       <%_ } _%>
     <%_ }) _%>
