--- a/generators/entity/templates/entity-delete-modal.js.ejs
+++ b/generators/entity/templates/entity-delete-modal.js.ejs
@@ -17,18 +17,19 @@ function <%= context.entityNameCapitalized %>EntityDeleteModal(props) {
         <Modal animationType="slide" transparent={true} visible={visible}>
             <View testID={testID} style={styles.centeredView}>
                 <View style={styles.modalView}>
-                    <Text style={styles.modalText}>Delete <%= context.entityNameCapitalized %> {entity.id}?</Text>
-
-                    <View style={styles.flex}>
-                        <TouchableHighlight style={[styles.openButton, styles.submitButton]} onPress={deleteEntity}>
-                            <Text style={styles.textStyle}>Delete</Text>
-                        </TouchableHighlight>
+                    <View style={[styles.flex, styles.flexRow]}>
+                        <Text style={styles.modalText}>Delete <%= context.entityNameCapitalized %> {entity.id}?</Text>
+                    </View>
+                    <View style={[styles.flexRow]}>
                         <TouchableHighlight
                             style={[styles.openButton, styles.cancelButton]}
                             onPress={() => {
                                 setVisible(false);
                             }}>
                             <Text style={styles.textStyle}>Cancel</Text>
+                        </TouchableHighlight>
+                        <TouchableHighlight style={[styles.openButton, styles.submitButton]} onPress={deleteEntity}>
+                            <Text style={styles.textStyle}>Delete</Text>
                         </TouchableHighlight>
                     </View>
                 </View>
