--- a/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-list-input.js.ejs
@@ -64,6 +64,7 @@ const pickerStyles = StyleSheet.create({
     borderWidth: 1,
     borderRadius: 4,
     borderColor: '#c0cbd3',
+    backgroundColor: 'white',
     color: 'black',
   },
   inputAndroid: {
@@ -73,6 +74,7 @@ const pickerStyles = StyleSheet.create({
     borderWidth: 0.5,
     borderRadius: 8,
     borderColor: '#c0cbd3',
+    backgroundColor: 'white',
     color: 'black',
   },
 });
