remove unused files, combine configs into app-config

--- a/generators/app/templates/app/navigation/drawer/drawer-content.js.ejs
+++ b/generators/app/templates/app/navigation/drawer/drawer-content.js.ejs
@@ -4,16 +4,18 @@ import { connect } from 'react-redux';
 import LoginActions from '../../modules/login/login.reducer';
 
 function DrawerContent(props) {
-  return (
+  const { loaded, account, logout } = props;
+  return !loaded ? null : (
     <DrawerContentScrollView {...props}>
       <DrawerItemList {...props} />
-      {props.account && <DrawerItem label="Logout" onPress={() => props.logout()} />}
+      {account && <DrawerItem label="Logout" onPress={logout} />}
     </DrawerContentScrollView>
   );
 }
 
 const mapStateToProps = (state) => {
   return {
+    loaded: state.appState.rehydrationComplete,
     account: state.account.account,
   };
 };
