--- a/generators/app/templates/app/shared/sagas/index.js.ejs
+++ b/generators/app/templates/app/shared/sagas/index.js.ejs
@@ -1,7 +1,7 @@
 import { takeLatest, all } from 'redux-saga/effects'
 import API from '../services/api'
 import FixtureAPI from '../services/fixture-api'
-import DebugConfig from '../../config/debug-config'
+import AppConfig from '../../config/app-config'
 
 /* ------------- Types ------------- */
 
@@ -29,7 +29,7 @@ import UserSagas from '../../shared/sagas/user.sagas'
 
 // The API we use is only used from Sagas, so we create it here and pass along
 // to the sagas which need it.
-const api = DebugConfig.useFixtures ? FixtureAPI : API.create()
+const api = AppConfig.useFixtures ? FixtureAPI : API.create()
 
 /* ------------- Connect Types To Sagas ------------- */
 
