--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -50,6 +50,7 @@
     "react-native-sectioned-multi-select": "REPLACE_WITH_VERSION",
     "react-native-web": "REPLACE_WITH_VERSION",
     "@expo/vector-icons": "REPLACE_WITH_VERSION",
+    "expo-constants": "REPLACE_WITH_VERSION",
     "expo-linking": "REPLACE_WITH_VERSION",
     "expo-splash-screen": "REPLACE_WITH_VERSION",
     "formik": "REPLACE_WITH_VERSION",
